crates/ir/tests/ir/snapshots/main__ir__lower__tuples__tuple5.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module tuples__tuple5

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: (Int, Int, Int, Int, Int) = tuple(1, 2, 3, 4, 5)
  let v1: Int = tuple_project v0.0
  let v2: Int = tuple_project v0.1
  let v3: Int = tuple_project v0.2
  let v4: Int = tuple_project v0.3
  let v5: Int = tuple_project v0.4
  let v7: Int = add_int(v1, v2)
  let v8: Int = add_int(v7, v3)
  let v9: Int = add_int(v8, v4)
  let v10: Int = add_int(v9, v5)
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v6, v10)
  v11
