crates/ir/tests/ir/snapshots/main__ir__lower__tuples__tuple8.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module tuples__tuple8

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: (Int, Int, Int, Int, Int, Int, Int, Int) = tuple(1, 2, 3, 4, 5, 6, 7, 8)
  let v1: Int = tuple_project v0.0
  let v2: Int = tuple_project v0.1
  let v3: Int = tuple_project v0.2
  let v4: Int = tuple_project v0.3
  let v5: Int = tuple_project v0.4
  let v6: Int = tuple_project v0.5
  let v7: Int = tuple_project v0.6
  let v8: Int = tuple_project v0.7
  let v10: Int = add_int(v1, v2)
  let v11: Int = add_int(v10, v3)
  let v12: Int = add_int(v11, v4)
  let v13: Int = add_int(v12, v5)
  let v14: Int = add_int(v13, v6)
  let v15: Int = add_int(v14, v7)
  let v16: Int = add_int(v15, v8)
  let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v17: Unit = call println(v9, v16)
  v17
