crates/ir/tests/ir/snapshots/main__ir__lower__tuples__tuple_nested.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module tuples__tuple_nested

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: (Int, Int) = tuple(1, 2)
  let v0: ((Int, Int), Int) = tuple(v1, 3)
  let v2: (Int, Int) = tuple_project v0.0
  let v3: Int = tuple_project v0.1
  let v4: Int = tuple_project v2.0
  let v5: Int = tuple_project v2.1
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Unit = call println(v6, v3)
  v7
