crates/ir/tests/ir/snapshots/main__ir__lower__tuples__tuple_trait_instance.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module tuples__tuple_trait_instance

trait Describe[h11] { describe(h11): String }
instance tuples__tuple_trait_instance.Describe[$Tuple2$Int$String] { describe=Describe$$$Tuple2$Int$String$$describe }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: (Int, String) = tuple(1, "hi")
  let v2: Dict[tuples__tuple_trait_instance.Describe, (Int, String)] = get_dict tuples__tuple_trait_instance.Describe[(Int, String)]
  let v3: String = trait_call tuples__tuple_trait_instance.Describe.describe(v2, v1)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4

fn Describe$$$Tuple2$Int$String$$describe(v5: (Int, String)) -> String =
  "ok"
