crates/ir/tests/ir/snapshots/main__ir__lower__tuples__tuple_trait_instance_owned.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module tuples__tuple_trait_instance_owned

trait Summarize[i8] { summarize(i8): String }
instance tuples__tuple_trait_instance_owned.Summarize[$Tuple2$Int$Option$String] { summarize=Summarize$$$Tuple2$Int$Option$String$$summarize }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn make_pair(v0: Option[String]) -> (Int, Option[String]) =
  let v1: (Int, Option[String]) = tuple(1, v0)
  v1

fn main() -> Unit =
  let v3: Option[String] = construct Option::Some#0("hi")
  let v4: (Int, Option[String]) = call make_pair(v3)
  let v5: Dict[tuples__tuple_trait_instance_owned.Summarize, (Int, Option[String])] = get_dict tuples__tuple_trait_instance_owned.Summarize[(Int, Option[String])]
  let v6: String = trait_call tuples__tuple_trait_instance_owned.Summarize.summarize(v5, v4)
  let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v2, v6)
  v7

fn Summarize$$$Tuple2$Int$Option$String$$summarize(v8: (Int, Option[String])) -> String =
  "ok"
